@@ -4,7 +4,7 @@ import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
-import java.util.Collections;
+import static java.util.Collections.emptyList;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -16,10 +16,10 @@ import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTes
 import static uk.gov.hmcts.probate.dmn.initiation.CamundaTaskWaInitiationBaseTest.minorityInterestHandOffReason;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.BO_RESOLVE_STOP_EVENT;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CHANGE_STATE_EVENT;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_MINORITY_INTEREST;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_MINORITY_INTEREST_CASE_PRINTED;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.EXAMINE_MINORITY_INTEREST_TASK_TYPE_NAME;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.HANDLE_EVIDENCE_EVENT;
-import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.READY_TO_ISSUE_STATE;
+import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.CASE_PRINTED_STATE;
 import static uk.gov.hmcts.probate.dmnutils.TaskAttributeConstants.RESOLVE_SME_REFERRAL_EVENT;
 
 public class CamundaTaskWaInitiationMinorityInterestTestProvider implements ArgumentsProvider {
@@ -27,133 +27,145 @@ public class CamundaTaskWaInitiationMinorityInterestTestProvider implements Argu
     @Override
     public Stream<? extends Arguments> provideArguments(ExtensionContext context) {
 
-        Map<String,Object> examineMinorityInterestTaskAttributes = Map.of(
-                "taskId", EXAMINE_MINORITY_INTEREST,
+        Map<String,Object> examineMinorityInterestCasePrintedTaskAttributes = Map.of(
+                "taskId", EXAMINE_MINORITY_INTEREST_CASE_PRINTED,
                 "name", EXAMINE_MINORITY_INTEREST_TASK_TYPE_NAME,
                 "processCategories", "case progression"
         );
 
         return Stream.of(
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    List.of(examineMinorityInterestTaskAttributes)
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    List.of(examineMinorityInterestTaskAttributes)
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    CHANGE_STATE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    List.of(examineMinorityInterestTaskAttributes)
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    RESOLVE_SME_REFERRAL_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    List.of(examineMinorityInterestTaskAttributes)
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",false,
-                            handOffReasonListWithHandOffReason(minorityInterestHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true,
-                            handOffReasonListWithHandOffReason(invalidHandOffReason)),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    BO_RESOLVE_STOP_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalData(false, "",true, Collections.emptyList()),
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    null,
-                    Collections.emptyList()
-            ),
-            Arguments.of(
-                    HANDLE_EVIDENCE_EVENT,
-                    READY_TO_ISSUE_STATE,
-                    additionalDataNoHandOffList(),
-                    Collections.emptyList()
-            )
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        List.of(examineMinorityInterestCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                ),
+                Arguments.of(
+                        HANDLE_EVIDENCE_EVENT,
+                        CASE_PRINTED_STATE,
+                        null,
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        List.of(examineMinorityInterestCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        BO_RESOLVE_STOP_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        List.of(examineMinorityInterestCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        RESOLVE_SME_REFERRAL_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        List.of(examineMinorityInterestCasePrintedTaskAttributes)
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",false,
+                                handOffReasonListWithHandOffReason(minorityInterestHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true,
+                                handOffReasonListWithHandOffReason(invalidHandOffReason), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalData(false, "",true, emptyList(), false),
+                        emptyList()
+                ),
+                Arguments.of(
+                        CHANGE_STATE_EVENT,
+                        CASE_PRINTED_STATE,
+                        additionalDataNoHandOffList(),
+                        emptyList()
+                )
         );
     }
 }
